--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">GitHub searcher</string>
     <string name="alert_dialog_error"> Попробовать ещё раз </string>
     <string name="nothing_was_found_for_your_search">По вашему запросу ничего не найдено</string>
+    <string name="something_went_wrong">Что-то пошло не так(</string>
+    <string name="please_try_again">Скорее всего, это не наша вина. Попробуйте ещё раз.</string>
 </resources>
