--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GitHub searcher</string>
+    <string name="location">Location: </string>
     <string name="alert_dialog_error"> Попробовать ещё раз </string>
     <string name="nothing_was_found_for_your_search">По вашему запросу ничего не найдено</string>
     <string name="something_went_wrong">Что-то пошло не так(</string>
